--- a/src/main.scss
+++ b/src/main.scss
@@ -9,6 +9,8 @@
 @import './shared/styles/fonts';
 @import './shared/styles/icons';
 @import './shared/styles/base';
+@import './shared/styles/generic';
+@import './shared/styles/layout';
 
 /* components */
 @import './Components/*/_style.scss';
