--- a/src/shared/styles/variables/_colors.scss
+++ b/src/shared/styles/variables/_colors.scss
@@ -1,4 +1,6 @@
 // TODO: add colors here
 
-$color: #e52f67;
-$color_link: #135391;
+$c_white: #fff;
+$c_black: #111;
+$c_blue_100: #0082c3; // blue 100%
+$c_blue_10: #e5f2f9; // blue 10%
