--- a/src/Components/Contact/_style.scss
+++ b/src/Components/Contact/_style.scss
@@ -4,10 +4,7 @@
   align-items: center;
   margin: 100px 0;
   padding: 50px 0;
-
-  > * {
-    max-width: 500px;
-  }
+  text-align: center;
 
   li {
     display: inline;
