--- a/src/Components/Contact/index.twig
+++ b/src/Components/Contact/index.twig
@@ -1,10 +1,12 @@
 <section is="component-contact">
-  <h2>Contact</h2>
-  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde error laborum, eos iure reprehenderit repellendus alias tenetur ducimus provident quia quaerat eligendi ipsum aperiam maxime nihil similique illum obcaecati id.</p>
-  <ul>
-    <li><a href="#" class="icon-facebook"></a></li>
-    <li><a href="#" class="icon-instagram"></a></li>
-    <li><a href="#" class="icon-twitter"></a></li>
-    <li><a href="#" class="icon-whatsapp"></a></li>
-  </ul>
+  <div class="container">
+    <h2>Contact</h2>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde error laborum, eos iure reprehenderit repellendus alias tenetur ducimus provident quia quaerat eligendi ipsum aperiam maxime nihil similique illum obcaecati id.</p>
+    <ul>
+      <li><a href="#" class="icon-facebook"></a></li>
+      <li><a href="#" class="icon-instagram"></a></li>
+      <li><a href="#" class="icon-twitter"></a></li>
+      <li><a href="#" class="icon-whatsapp"></a></li>
+    </ul>
+  </div>
 </section>
